# ASV-Thruster-Test

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/motor_driver/lib/motor_driver/: motor_driver_node
install/motor_driver/share/motor_driver/: package.sh  package.xml
install/teleop_control/share/teleop_control/: package.dsv  package.ps1  package.sh  package.xml
log/: latest_build
motor_driver/: motor_controller.py  setup.py
teleop_control/: setup.py
teleop_control/config/: teleop.yaml
teleop_control/launch/: teleop-joy.launch.py
